--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "animejs": "^3.2.1",
     "framer": "^1.2.30",
     "js-cookie": "^2.2.1",
+    "lodash": "^4.17.21",
     "mui-datatables": "^3.7.7",
     "node-sass": "^4.14.1",
     "react": "^17.0.2",
